--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,1 +1,1 @@
-Here comes desription. I will fill it soon
+Django generic basket application. Allow to put in basket any object and view orders in the Django admin interface
