--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include basket/media *.*  
+recursive-include basket/static *.*
 recursive-include basket/templates *.html *.js
 recursive-include basket/locale *.po, *.mo
